--- a/pages/order/order.module.css
+++ b/pages/order/order.module.css
@@ -1,12 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@tailwind variants;
-
 .done {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.undone .checkedIcon {
+  display: none;
 }
 
 .inProgress {
@@ -31,3 +30,5 @@
   align-items: center;
   opacity: 0.3;
 }
+
+
